force-app/src/objects/CTPISA__BookingCapture__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Service_Area__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approval Service Area</label>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipLabel>Invoice Scans</relationshipLabel>
        <relationshipName>Invoice_Scans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver0__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Invoice_Scans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Invoice_Scans1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Invoice_Scans2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Invoice_Scans3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CTPISA__AVG_PPV__c</fullName>
        <description>Deprecated</description>
        <formula>CTPISA__PPV_Header__c/ CTPISA__Total_NetValue_of_Lines__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ZZZAVG PPV %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CTPISA__Additional_Comments__c</fullName>
        <label>Additional Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CTPISA__ApprovalStatus__c</fullName>
        <label>ApprovalStatus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CTPISA__Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver Not Use</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Invoice_Scans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CTPISA__Attempts__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of attempts made to collect the OCR results from the 3rd party OCR service.</description>
        <inlineHelpText>The number of attempts made to collect the OCR results from the 3rd party OCR service.</inlineHelpText>
        <label>Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CTPISA__Average_PPV__c</fullName>
        <formula>CTPISA__PPV_Header__c/ CTPISA__Total_NetValue_of_Lines__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average PPV %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CTPISA__Balance_Sheet_GLA_Prepaid_Expenses__c</fullName>
        <formula>CTPISA__VendorAccount__r.CTPISA__Balance_Sheet_GLA_Prepaid_Expenses__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance Sheet GLA Prepaid Expenses</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTPISA__CancellationReason__c</fullName>
        <description>Cancellation reason.</description>
        <inlineHelpText>Cancellation reason.</inlineHelpText>
        <label>CancellationReason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Max OCR Attempts Reached</fullName>
                </value>
                <value>
                    <fullName>Job Needs Restart</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CTPISA__CompanyName__c</fullName>
        <description>The name of the company. To show to users without a FF force license. Only users with the permission set &apos;Cloud Team PISA Non FF User&apos; will be able to see this field.</description>
        <inlineHelpText>The name of the company. To show to users without a FF force license. Only users with the permission set &apos;Cloud Team PISA Non FF User&apos; will be able to see this field.</inlineHelpText>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTPISA__Company__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipName>BookingCaptures</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CTPISA__Delay_Posting_of_PIN_to_After_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delay Posting of PIN to After Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTPISA__Email_Rejection_Log__c</fullName>
        <label>Email Rejection Log</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CTPISA__Exclude_From_Post_Approval_Handling__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude From Post-Approval Handling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTPISA__ExpenseAccount__c</fullName>
        <formula>CTPISA__VendorAccount__r.c2g__CODADefaultExpenseAccount__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expense Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTPISA__InvoiceBookingPeriodName__c</fullName>
        <description>Non FF user read only booking period name.</description>
        <inlineHelpText>Non FF user read only booking period name.</inlineHelpText>
        <label>Booking Period Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTPISA__InvoiceBookingPeriod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Booking Period</label>
        <referenceTo>c2g__codaPeriod__c</referenceTo>
        <relationshipName>BookingCaptures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CTPISA__InvoiceCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Currency</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipName>BookingCaptures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CTPISA__InvoiceDate__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CTPISA__InvoiceDescription__c</fullName>
        <label>Invoice Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CTPISA__InvoiceDueDate__c</fullName>
        <label>Invoice Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CTPISA__InvoiceNumber__c</fullName>
        <label>Invoice Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTPISA__InvoiceScanWorkflowKey__c</fullName>
        <formula>CTPISA__InvoiceScanWorkflow__r.CTPISA__EmailServiceAddressPrefix__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Scan Workflow Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTPISA__InvoiceScanWorkflow__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Invoice Scan Workflow</label>
        <referenceTo>CTPISA__InvoiceScanWorkflow__c</referenceTo>
        <relationshipName>BookingCaptures</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CTPISA__InvoiceTotalVATExcluded__c</fullName>
        <label>Invoice Total Tax Excluded</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CTPISA__InvoiceTotalVATIncluded__c</fullName>
        <label>Invoice Total Tax Included</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CTPISA__InvoiceVATAmount__c</fullName>
        <description>The amount of VAT included in the invoice.</description>
        <inlineHelpText>The amount of VAT included in the invoice.</inlineHelpText>
        <label>Invoice VAT Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CTPISA__IsCanceled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether the booking capture has been cancelled.</description>
        <inlineHelpText>Whether the booking capture has been cancelled.</inlineHelpText>
        <label>IsCanceled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTPISA__IsCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Booking has been executed and is booked into FF.</description>
        <inlineHelpText>Booking has been executed and is booked into FF.</inlineHelpText>
        <label>IsCompleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTPISA__IsSavedDuringReview__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Saved During Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTPISA__JobExpireDatetime__c</fullName>
        <label>JobExpireDatetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CTPISA__JobExpireTimestampInSeconds__c</fullName>
        <description>OCR job expiry.: Unix timestamp in seconds.</description>
        <inlineHelpText>OCR job expiry.: Unix timestamp in seconds.</inlineHelpText>
        <label>JobExpireTimestampInSeconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CTPISA__JobID__c</fullName>
        <label>JobID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTPISA__JobIsFinished__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether the OCR Job is finished and all the results are in.</description>
        <inlineHelpText>Whether the OCR Job is finished and all the results are in.</inlineHelpText>
        <label>JobIsFinished</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTPISA__LastAttempt__c</fullName>
        <description>The timestamp of the last attempt of retrieving the job results from the 3rd party OCR service.</description>
        <inlineHelpText>The timestamp of the last attempt of retrieving the job results from the 3rd party OCR service.</inlineHelpText>
        <label>LastAttempt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CTPISA__MatchesInJSON__c</fullName>
        <label>MatchesInJSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CTPISA__Mode__c</fullName>
        <label>Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OCRD</fullName>
                </value>
                <value>
                    <fullName>OCRK</fullName>
                </value>
                <value>
                    <fullName>UBL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CTPISA__NA_Converted_to_Files__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NA Converted to Files</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTPISA__NeedsApprovalToPostPayableInvoice__c</fullName>
        <formula>CTPISA__InvoiceScanWorkflow__r.CTPISA__NeedsApprovalToPostPayableInvoice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Needs Approval To Post Payable Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTPISA__NeedsPosting__c</fullName>
        <formula>ISPICKVAL(CTPISA__ApprovalStatus__c, &apos;Approved&apos;)
&amp;&amp; CTPISA__NeedsApprovalToPostPayableInvoice__c = true
&amp;&amp; NOT(ISPICKVAL(CTPISA__PayableInvoice__r.c2g__InvoiceStatus__c, &apos;Complete&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Needs Posting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTPISA__NeedsReleasing__c</fullName>
        <formula>ISPICKVAL(CTPISA__ApprovalStatus__c, &apos;Approved&apos;)
&amp;&amp; CTPISA__NeedsApprovalToPostPayableInvoice__c = false 
&amp;&amp; ISPICKVAL(CTPISA__PayableInvoice__r.c2g__InvoiceStatus__c, &apos;Complete&apos;)
&amp;&amp; CTPISA__PayableInvoice__r.c2g__HoldStatus__c = &apos;On Hold&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Needs Releasing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTPISA__NextAttemptAfter__c</fullName>
        <description>The date/time after which another attempt will take place to retrieve the booking results.</description>
        <formula>IF( ISBLANK( CTPISA__LastAttempt__c ),
CreatedDate,
CTPISA__LastAttempt__c 
) 
+ IF(
CTPISA__Attempts__c &gt; 0,
( 
(2^(CTPISA__Attempts__c)) /14400
), 0
)
+ 
IF(CTPISA__Attempts__c == 0, 60 / 86400, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The date/time after which another attempt will take place to retrieve the booking results.</inlineHelpText>
        <label>NextAttemptAfter</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CTPISA__NumStatus__c</fullName>
        <label>NumStatus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CTPISA__NumberOfItems__c</fullName>
        <description>The number of booking capture items.</description>
        <inlineHelpText>The number of booking capture items.</inlineHelpText>
        <label>Number Of Items</label>
        <summaryForeignKey>CTPISA__BookingCaptureItem__c.CTPISA__BookingCapture__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CTPISA__Number_of_lines__c</fullName>
        <label>Number of lines</label>
        <summaryForeignKey>CTPISA__BookingCaptureLine__c.CTPISA__BookingCapture__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CTPISA__OCRWorkflow__c</fullName>
        <formula>TEXT(CTPISA__InvoiceScanWorkflow__r.CTPISA__OCRWorkflow__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OCR Workflow</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTPISA__OriginalFileName__c</fullName>
        <description>The original file name of the uploaded invoice file.</description>
        <inlineHelpText>The original file name of the uploaded invoice file.</inlineHelpText>
        <label>OriginalFileName</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTPISA__PINPostOrReleaseFailed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is checked when the batch job responsible for posting or releasing the payable invoice (linked to this scan) failed.</description>
        <inlineHelpText>Is checked when the batch job responsible for posting or releasing the payable invoice (linked to this scan) failed.</inlineHelpText>
        <label>PINPostOrReleaseFailed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTPISA__PPV_Amount_Header__c</fullName>
        <label>PPV Amount Header</label>
        <summarizedField>CTPISA__BookingCaptureLine__c.CTPISA__Extended_PPV__c</summarizedField>
        <summaryForeignKey>CTPISA__BookingCaptureLine__c.CTPISA__BookingCapture__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CTPISA__PPV_Header__c</fullName>
        <label>PPV % Header</label>
        <summarizedField>CTPISA__BookingCaptureLine__c.CTPISA__PPV_Weighted__c</summarizedField>
        <summaryForeignKey>CTPISA__BookingCaptureLine__c.CTPISA__BookingCapture__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CTPISA__PagesAreLoading__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked when pages are still loading (downloaded from Cloud Team OCR Hub)</description>
        <inlineHelpText>Checked when pages currently are being downloaded. (downloaded from Cloud Team OCR Hub)</inlineHelpText>
        <label>Pages Are Loading</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTPISA__PayableInvoiceHoldStatus__c</fullName>
        <formula>CTPISA__PayableInvoice__r.c2g__HoldStatus__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payable Invoice Hold Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTPISA__PayableInvoiceStatus__c</fullName>
        <formula>TEXT(CTPISA__PayableInvoice__r.c2g__InvoiceStatus__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payable Invoice Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTPISA__PayableInvoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payable Invoice</label>
        <referenceTo>c2g__codaPurchaseInvoice__c</referenceTo>
        <relationshipName>BookingCaptures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CTPISA__Payment_Reference__c</fullName>
        <description>Value from this field will be mapped to the Payable_Invoice__c -&gt; Reference_1__c field</description>
        <label>Payment Reference</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTPISA__Prepaid_Expenses_Reference__c</fullName>
        <label>Prepaid Expenses Reference</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTPISA__Purchase_Order_List__c</fullName>
        <label>Purchase Order List</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CTPISA__Purchase_Order__c</fullName>
        <description>Text field to store the purchase order id for invoice scan</description>
        <label>Purchase Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTPISA__RawJobResponse__c</fullName>
        <description>The raw response from 3rd party OCR service.</description>
        <inlineHelpText>The raw response from 3rd party OCR service.</inlineHelpText>
        <label>RawJobResponse</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CTPISA__RawJobResult__c</fullName>
        <label>RawJobResult</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CTPISA__ShareWithUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Add read Access with this user. After save, the sharing is added and this field is cleared.</inlineHelpText>
        <label>Share With User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Invoice_Scans1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CTPISA__Source__c</fullName>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTPISA__Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>InProgress</fullName>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>ReadyForReview</fullName>
                    <label>Ready For Review</label>
                </value>
                <value>
                    <fullName>ReviewInProgress</fullName>
                    <label>Review In Progress</label>
                </value>
                <value>
                    <fullName>InApproval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>InvoiceRejectionEmailSent</fullName>
                    <label>Invoice Rejection Email Sent</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CTPISA__Tax_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipName>BookingCaptures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CTPISA__Total_NetValue_of_Lines__c</fullName>
        <description>sum of Net value of Invoice lines</description>
        <label>Total NetValue of Lines</label>
        <summarizedField>CTPISA__BookingCaptureLine__c.CTPISA__NetValue__c</summarizedField>
        <summaryForeignKey>CTPISA__BookingCaptureLine__c.CTPISA__BookingCapture__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CTPISA__Total_PO_Amount__c</fullName>
        <description>To store the total of selected purchase line order amount</description>
        <label>Total PO Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CTPISA__UBL_Invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UBL Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTPISA__UBL_Multiple_Account_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UBL Multiple Account Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTPISA__UseLookup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UseLookup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTPISA__VendorAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>BookingCaptures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CTPISA__WorkflowID__c</fullName>
        <description>The workflow ID to use for OCR Processing on 3rd party side.</description>
        <inlineHelpText>The workflow ID to use for OCR Processing on 3rd party side.</inlineHelpText>
        <label>WorkflowID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Dim_1__c</fullName>
        <label>Line Dim 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Dim_2__c</fullName>
        <label>Line Dim 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Invoice Scan</label>
    <listViews>
        <fullName>Approved_Invoices_Not_Posted</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>CTPISA__InvoiceNumber__c</columns>
        <columns>CTPISA__Status__c</columns>
        <columns>CTPISA__PayableInvoice__c</columns>
        <columns>CTPISA__PayableInvoiceStatus__c</columns>
        <columns>CTPISA__PayableInvoiceHoldStatus__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CTPISA__PayableInvoiceStatus__c</field>
            <operation>notEqual</operation>
            <value>Complete</value>
        </filters>
        <filters>
            <field>CTPISA__ApprovalStatus__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>Approved Invoices Not Posted</label>
    </listViews>
    <listViews>
        <fullName>Approved_Invoices_Posted</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>CTPISA__InvoiceNumber__c</columns>
        <columns>CTPISA__Status__c</columns>
        <columns>CTPISA__PayableInvoice__c</columns>
        <columns>CTPISA__PayableInvoiceStatus__c</columns>
        <columns>CTPISA__PayableInvoiceHoldStatus__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CTPISA__Company__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CTPISA__PayableInvoiceStatus__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </filters>
        <filters>
            <field>CTPISA__ApprovalStatus__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>Approved Invoices Posted</label>
    </listViews>
    <listViews>
        <fullName>CTPISA__All</fullName>
        <columns>NAME</columns>
        <columns>CTPISA__InvoiceNumber__c</columns>
        <columns>CTPISA__InvoiceDate__c</columns>
        <columns>CTPISA__InvoiceTotalVATIncluded__c</columns>
        <columns>CTPISA__VendorAccount__c</columns>
        <columns>CTPISA__Status__c</columns>
        <columns>CTPISA__PayableInvoiceStatus__c</columns>
        <columns>Approver_1__c</columns>
        <columns>Approver_2__c</columns>
        <columns>Approver_3__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CTPISA__ApprovedInvoicesNotPostedOrOnHold</fullName>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <columns>NAME</columns>
        <columns>CTPISA__InvoiceNumber__c</columns>
        <columns>CTPISA__Status__c</columns>
        <columns>CTPISA__PayableInvoice__c</columns>
        <columns>CTPISA__PayableInvoiceStatus__c</columns>
        <columns>CTPISA__PayableInvoiceHoldStatus__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CTPISA__PayableInvoiceHoldStatus__c</field>
            <operation>equals</operation>
            <value>On Hold</value>
        </filters>
        <filters>
            <field>CTPISA__PayableInvoiceStatus__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <filters>
            <field>CTPISA__ApprovalStatus__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>Approved Invoices Not Posted or On Hold</label>
    </listViews>
    <listViews>
        <fullName>CTPISA__X1_Scanning_in_Progress</fullName>
        <columns>NAME</columns>
        <columns>CTPISA__InvoiceScanWorkflow__c</columns>
        <columns>CTPISA__InvoiceNumber__c</columns>
        <columns>CTPISA__InvoiceDate__c</columns>
        <columns>CTPISA__InvoiceTotalVATIncluded__c</columns>
        <columns>CTPISA__PayableInvoice__c</columns>
        <columns>CTPISA__VendorAccount__c</columns>
        <columns>CTPISA__Status__c</columns>
        <columns>Approver_1__c</columns>
        <columns>Approver_2__c</columns>
        <columns>Approver_3__c</columns>
        <columns>Approval_Service_Area__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CTPISA__Status__c</field>
            <operation>equals</operation>
            <value>InProgress</value>
        </filters>
        <label>1. Scanning in Progress</label>
    </listViews>
    <listViews>
        <fullName>CTPISA__X2_Ready_for_Review</fullName>
        <columns>NAME</columns>
        <columns>CTPISA__InvoiceScanWorkflow__c</columns>
        <columns>CTPISA__InvoiceNumber__c</columns>
        <columns>CTPISA__InvoiceDate__c</columns>
        <columns>CTPISA__InvoiceTotalVATIncluded__c</columns>
        <columns>CTPISA__PayableInvoice__c</columns>
        <columns>CTPISA__VendorAccount__c</columns>
        <columns>CTPISA__Status__c</columns>
        <columns>Approver_1__c</columns>
        <columns>Approver_2__c</columns>
        <columns>Approver_3__c</columns>
        <columns>Approval_Service_Area__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CTPISA__Status__c</field>
            <operation>equals</operation>
            <value>ReadyForReview</value>
        </filters>
        <filters>
            <field>CTPISA__CompanyName__c</field>
            <operation>contains</operation>
            <value>Inc</value>
        </filters>
        <label>2b. Ready for Review Inc</label>
    </listViews>
    <listViews>
        <fullName>CTPISA__X3_Review_in_Progress</fullName>
        <columns>NAME</columns>
        <columns>CTPISA__InvoiceScanWorkflow__c</columns>
        <columns>CTPISA__InvoiceNumber__c</columns>
        <columns>CTPISA__InvoiceDate__c</columns>
        <columns>CTPISA__InvoiceTotalVATIncluded__c</columns>
        <columns>CTPISA__PayableInvoice__c</columns>
        <columns>CTPISA__VendorAccount__c</columns>
        <columns>CTPISA__Status__c</columns>
        <columns>Approver_1__c</columns>
        <columns>Approver_2__c</columns>
        <columns>Approver_3__c</columns>
        <columns>Approval_Service_Area__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CTPISA__Status__c</field>
            <operation>equals</operation>
            <value>ReviewInProgress</value>
        </filters>
        <label>3. Review in Progress</label>
    </listViews>
    <listViews>
        <fullName>CTPISA__X4_Approval_in_Progress</fullName>
        <columns>NAME</columns>
        <columns>CTPISA__InvoiceScanWorkflow__c</columns>
        <columns>CTPISA__InvoiceNumber__c</columns>
        <columns>CTPISA__InvoiceDate__c</columns>
        <columns>CTPISA__InvoiceTotalVATIncluded__c</columns>
        <columns>CTPISA__PayableInvoice__c</columns>
        <columns>CTPISA__Status__c</columns>
        <columns>CTPISA__VendorAccount__c</columns>
        <columns>Approver_1__c</columns>
        <columns>Approver_2__c</columns>
        <columns>Approver_3__c</columns>
        <columns>Approval_Service_Area__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CTPISA__Status__c</field>
            <operation>equals</operation>
            <value>InApproval</value>
        </filters>
        <label>4. Approval in Progress</label>
    </listViews>
    <listViews>
        <fullName>CTPISA__X5_Approved</fullName>
        <columns>NAME</columns>
        <columns>CTPISA__InvoiceNumber__c</columns>
        <columns>CTPISA__InvoiceDate__c</columns>
        <columns>CTPISA__InvoiceTotalVATIncluded__c</columns>
        <columns>CTPISA__PayableInvoice__c</columns>
        <columns>CTPISA__VendorAccount__c</columns>
        <columns>CTPISA__Status__c</columns>
        <columns>Approver_1__c</columns>
        <columns>Approver_2__c</columns>
        <columns>Approver_3__c</columns>
        <columns>Approval_Service_Area__c</columns>
        <columns>CTPISA__InvoiceDescription__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CTPISA__ApprovalStatus__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <filters>
            <field>Approver_1__c</field>
            <operation>contains</operation>
            <value>Brian</value>
        </filters>
        <label>5. Approved</label>
    </listViews>
    <listViews>
        <fullName>CTPISA__X5_Canceled</fullName>
        <columns>NAME</columns>
        <columns>CTPISA__Status__c</columns>
        <columns>CTPISA__VendorAccount__c</columns>
        <columns>CTPISA__InvoiceNumber__c</columns>
        <columns>CTPISA__PayableInvoice__c</columns>
        <columns>CTPISA__InvoiceScanWorkflow__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CTPISA__Status__c</field>
            <operation>equals</operation>
            <value>Canceled</value>
        </filters>
        <label>6. Cancelled</label>
    </listViews>
</CustomObject>